--- a/PinterestUIMoc/PinterestUIMoc-Info.plist
+++ b/PinterestUIMoc/PinterestUIMoc-Info.plist
@@ -28,6 +28,8 @@
 	<string>MainStoryboard_iPhone</string>
 	<key>UIMainStoryboardFile~ipad</key>
 	<string>MainStoryboard_iPad</string>
+	<key>UIMainStoryboardFile~ipad - 2</key>
+	<string>MainStoryboard_iPad</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
